nearly completed old features only 🙂

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-  "cSpell.words": ["GIFS"]
+  "cSpell.words": [
+    "alphabi",
+    "GIFS",
+    "giftypes",
+    "Giphy",
+    "prismadb",
+    "signup",
+    "tailwindcss",
+    "tanmaypanda",
+    "zustand"
+  ]
 }
