added all apis of aggregation & made two graph

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,17 @@
 {
   "cSpell.words": [
+    "admintoken",
     "alphabi",
+    "datapoints",
     "GIFS",
     "giftypes",
     "Giphy",
+    "keywordtype",
     "prismadb",
     "signup",
     "tailwindcss",
     "tanmaypanda",
+    "timelinetype",
     "zustand"
   ]
 }
