--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "antd": "^5.13.2",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.1",
@@ -26,8 +27,10 @@
     "next": "14.1.0",
     "prisma": "^5.8.1",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-cookie": "^7.0.1",
     "react-dom": "^18",
+    "recharts": "^2.10.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.8.9",
