--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-menubar": "^1.0.4",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@types/bcrypt": "^5.0.2",
@@ -22,13 +23,16 @@
     "chart.js": "^4.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "framer-motion": "^11.0.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.316.0",
     "next": "14.1.0",
     "prisma": "^5.8.1",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-cookie": "^7.0.1",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "recharts": "^2.10.4",
     "tailwind-merge": "^2.2.1",
