resolving error with cors ✔

--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ JWT_SECRETE = tanmay_jwt_secrete
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://tanmaypanda752:alphabi-giphy@giphy.bc5rcdz.mongodb.net/Giphy"
+
+BASE_URL="https://gifinfinity-remastered.vercel.app"
